--- a/css/estilos.css
+++ b/css/estilos.css
@@ -131,7 +131,10 @@ h3{
     justify-content: space-around;
     height: 40rem;
     
+    
 }
+
+
 
 
 .menutext{
@@ -142,18 +145,56 @@ h3{
     flex-direction: column;
    justify-content: center;
    align-items: center;
+
     }
 
 
 .menutext--text{
     font-family:'HelveticaRoman' ;
-    font-size: 1.6rem;
+    font-size: 1.8rem;
 }
 
 .menupic__art{
-    height: 400px;
-    width: 300px;
     
+    margin:25px;
+    height: 25rem;
+    width: 18.75rem;
+    background:#FFB600;
+    border:  solid black;
+    border-color: black;
+    border-width: 5px 3px 3px 5px;
+    border-radius:95% 4% 97% 5%/4% 94% 3% 95%;
+    transform: rotate(2deg);
+    padding-top: 1rem
+    
+    
+}
+
+.menupic__artp{
+    height: 400px;
+    width: 300px;}
+
+.menupic__button{
+    
+    background: #EF7320;
+    font-size: 20px;
+    color: white;
+    border-radius: 7px;
+    box-shadow: 0 7px 0px #6d4c41;
+    display: inline-block;
+    transition: all .2s;
+    position: relative;
+    padding: 20px 25px;
+    position: relative;
+    top: 2.5rem;
+    cursor: pointer;
+    margin:0 20px;
+}
+
+.menupic__button:active{
+    top: 3px;
+    box-shadow: 0 2px 0px #6d4c41;
+    transition: all .2s;
 }
 
 .menupic__art--img{
@@ -161,17 +202,16 @@ h3{
     height: 13rem;
     width: 13rem;
    border-radius: 50%;
+   border: 0.5rem inset #EF7320 ;
 }
 
 .menupic__text{
     height: 19rem;
     width: 13rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
     font-family: 'HelveticaRoman';
-    font-size: 1.4rem;
+    font-size: 1rem;
+    position: relative;
+    left: 2rem;
     
 }
 
@@ -339,7 +379,7 @@ fieldset{
 
 }
 
- 
+/* Media query starts  */
     
 @media (max-width:768px)
 {
