--- a/css/estilos.css
+++ b/css/estilos.css
@@ -251,25 +251,11 @@ h3{
     transform: scale(1.2);
   }
 
+/* --------------Css dek index---------- */
 
 
-.chiqui{
-    margin: 10px 0 10px 0;
-    position: relative;
-    left: 20px;
-    
-}
 
-.jump{
-    width: 100%;
-    display:block;
-}
 
-fieldset{
-    position: relative;
-    left: 800px;
-    
-}
 
 
 
@@ -333,7 +319,7 @@ fieldset{
 .articulosperro{
     display: grid;
     grid-template-columns: 20rem 20rem 20rem;
-    grid-template-rows: 30rem 30rem 30rem;
+    grid-template-rows: 35rem 35rem 35rem;
     background-color: #FFB600;
     justify-content: center;
     grid-column-gap: 1rem;
@@ -358,11 +344,11 @@ fieldset{
     font-family: 'HevelticaCond' ;
     position: relative;
     left: 1.2rem;
-    height: auto;
-    width: auto;
+    padding: 1rem;
 }
 
 .articulosperro_p{
+    padding: 1rem;
     font-family:'HevelticaRoman';
     position: relative;
     left: -1rem;
@@ -376,8 +362,22 @@ fieldset{
     position: relative;
     left: 2px;
     top: -1rem;
-
 }
+
+.heroCat{
+    display: flex;
+    width: 100%;
+    height: 25rem;
+    display: inline-block;
+    text-align: center;
+    background: url("../Assets/gatos.jpg") no-repeat fixed center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-repeat: no-repeat;    
+    background-size: cover;
+    background-position-y: -50px ;
+    background-color:  #c63637;;
 
 /* Media query starts  */
     
@@ -587,4 +587,5 @@ fieldset{
         
         
 }    
+
 
