--- a/css/estilos.css
+++ b/css/estilos.css
@@ -16,6 +16,9 @@
     font-style: normal;
 }
 
+/* inicio del css del index*/
+
+
 .header{
     display:flex;
     background-image: url(/Assets/fondo\ patitas-01[401].png);
@@ -50,7 +53,7 @@
         
 
     }
-/* Esto es la posicion de la list */
+
  
 .list__item{
     
@@ -68,7 +71,7 @@
     border-right: none;
     border-bottom: none;
 }
-/* Esto son propiedades de las li */
+
 
 .list__item--line{
     text-decoration: none;
@@ -85,9 +88,6 @@
   
   
 }
-
-
-
 
 
 .hero{
@@ -251,12 +251,14 @@ h3{
     transform: scale(1.2);
   }
 
-/* --------------Css dek index---------- */
+/* -------------- fin de Css del index---------- */
 
 
 
 
 
+
+/* Css de perros*/
 
 
 .heroDog{
@@ -272,7 +274,7 @@ h3{
     background-repeat: no-repeat;    
     background-size: cover;
     background-position-y: -50px ;
-    background-color:  #c63637;;
+    background-color:  #FFB600;;
 }
 
 
@@ -336,6 +338,7 @@ h3{
     border: 0.2rem outset #FF4800;
     font-family: 'HevelticaRoman';    
     overflow: hidden;
+    padding: 1rem;
     
     
 }
@@ -364,6 +367,11 @@ h3{
     top: -1rem;
 }
 
+/* fin de css de perros*/
+
+
+/* Comienzo de css de gatos*/
+
 .heroCat{
     display: flex;
     width: 100%;
@@ -377,7 +385,77 @@ h3{
     background-repeat: no-repeat;    
     background-size: cover;
     background-position-y: -50px ;
-    background-color:  #c63637;;
+    background-color:  #924E7D;;
+}
+
+.menutextCat{
+    height: 8rem;
+    padding: 8rem;
+    background-color:#924E7D ;
+    display: flex;
+    flex-direction: column;
+   justify-content: center;
+   align-items: center;
+
+    }
+
+    .CatText{
+        height: 7rem;
+        background-color: #FFA07A;
+        font-family:'HevelticaCond' ;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        font-size: 1.5rem;
+        
+    
+    }
+
+    .menupicg{
+        display: inline-block;
+        background-color: #FFA07A;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        height: 20rem;
+        
+    }
+
+    .menupic__art--imgg{
+        margin-left: 0.938rem;
+        height: 13rem;
+        width: 13rem;
+        border: 1rem solid #924E7D  ;
+       
+    }
+
+
+    .articulosgato{
+        display: grid;
+        grid-template-columns: 20rem 20rem 20rem;
+        grid-template-rows: 35rem 35rem 35rem;
+        background-color: #FFA07A;
+        justify-content: center;
+        grid-column-gap: 1rem;
+        grid-row-gap: 1rem;
+    
+    }
+    
+    .articulosgato__hijo{
+        background-color: transparent;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        border-radius: 20px;
+        border: 0.2rem outset #924E7D;
+        font-family: 'HevelticaRoman';    
+        overflow: hidden;
+        padding: 1rem;
+        
+        
+    }
+    
 
 /* Media query starts  */
     
@@ -584,8 +662,12 @@ h3{
             top: -1rem;
         
         }
+}
+    
         
         
-}    
+
+
+
 
 
