--- a/css/main.css
+++ b/css/main.css
@@ -5,11 +5,11 @@
 
 @font-face {
   font-family: 'HevelticaRoman';
-  src: url("/Assets/HelveticaLTStdRoman.otf") format("truetype");
+  src: url("../Assets/HelveticaLTStdRoman.otf") format("truetype");
   font-weight: normal;
   font-style: normal;
   font-family: 'HevelticaCond';
-  src: url("/Assets/HelveticaLTStdBoldCondObl.otf") format("truetype");
+  src: url("../Assets/HelveticaLTStdBoldCondObl.otf") format("truetype");
   font-weight: normal;
   font-style: normal; }
 
@@ -237,7 +237,7 @@ h3 {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  height: 20rem; }
+  height: auto; }
 
 .articulosperro {
   display: grid;
