--- a/scss/_perros.scss
+++ b/scss/_perros.scss
@@ -51,7 +51,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    height: 20rem;
+    height: auto;
     
 }
 
