Se realizan variables

--- a/scss/_gato.scss
+++ b/scss/_gato.scss
@@ -27,7 +27,7 @@
 
     .CatText{
         height: 7rem;
-        background-color: #FFA07A;
+        background-color: white;
         font-family:'HevelticaCond' ;
         display: flex;
         flex-direction: row;
@@ -39,7 +39,7 @@
 
     .menupicg{
         display: inline-block;
-        background-color: #FFA07A;
+        background-color: white;
         width: 100%;
         display: flex;
         flex-direction: row;
@@ -61,7 +61,7 @@
         display: grid;
         grid-template-columns: 20rem 20rem 20rem;
         grid-template-rows: 35rem 35rem 35rem;
-        background-color: #FFA07A;
+        background-color: white;
         justify-content: center;
         grid-column-gap: 1rem;
         grid-row-gap: 1rem;
