--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -3,7 +3,8 @@
     background-image: url("../Assets/fondo\ patitas-01[401].png");
     justify-content: space-between;
     align-items: center;
-    width: 100%;
+    width: auto;
+    height: 10rem;
 }
 
 .header__logo{
