--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,8 @@
   background-image: url("../Assets/fondo patitas-01[401].png");
   justify-content: space-between;
   align-items: center;
-  width: 100%; }
+  width: auto;
+  height: 10rem; }
 
 .header__logo {
   position: relative;
@@ -219,7 +220,7 @@ h3 {
   margin-left: 0.938rem;
   height: 13rem;
   width: 13rem;
-  border: 1rem solid #FF4800; }
+  border: 1rem solid #EF7320; }
 
 .DogText {
   height: 7rem;
@@ -231,9 +232,9 @@ h3 {
   font-size: 1.5rem; }
 
 .menupicp {
-  display: inline-block;
   background-color: #FFB600;
   width: 100%;
+  display: inline-block;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -254,7 +255,7 @@ h3 {
   flex-direction: column;
   align-items: center;
   border-radius: 20px;
-  border: 0.2rem outset #FF4800;
+  border: 0.2rem outset #EF7320;
   font-family: 'HevelticaRoman';
   overflow: hidden;
   padding: 1rem; }
@@ -304,7 +305,7 @@ h3 {
 
 .CatText {
   height: 7rem;
-  background-color: #FFA07A;
+  background-color: white;
   font-family: 'HevelticaCond';
   display: flex;
   flex-direction: row;
@@ -313,7 +314,7 @@ h3 {
 
 .menupicg {
   display: inline-block;
-  background-color: #FFA07A;
+  background-color: white;
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -330,7 +331,7 @@ h3 {
   display: grid;
   grid-template-columns: 20rem 20rem 20rem;
   grid-template-rows: 35rem 35rem 35rem;
-  background-color: #FFA07A;
+  background-color: white;
   justify-content: center;
   grid-column-gap: 1rem;
   grid-row-gap: 1rem; }
