--- a/css/main.css
+++ b/css/main.css
@@ -83,13 +83,14 @@
   position: relative;
   top: 7rem;
   left: -25rem;
+  font-family: "HevelticaCond";
   font-size: 2rem;
   color: #FFB600; }
 
 h3 {
   color: black;
   text-align: center;
-  font-family: 'HevelticaCond';
+  font-family: "HevelticaCond";
   font-size: 3rem; }
 
 .menupic {
@@ -104,19 +105,19 @@ h3 {
 .menutext {
   height: 8rem;
   padding: 8rem;
-  background-color: #FFB600;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+  background-color: #FFB600; }
 
 .menutext--text {
-  font-family: 'HelveticaRoman';
+  font-family: "HelveticaRoman";
   font-size: 1.8rem; }
 
 .menupic__art {
   margin: 25px;
-  height: 25rem;
+  height: auto;
   width: 18.75rem;
   background: #FFB600;
   border: solid black;
@@ -161,7 +162,7 @@ h3 {
   height: 19rem;
   width: 13rem;
   font-family: 'HelveticaRoman';
-  font-size: 1rem;
+  font-size: 1.5rem;
   position: relative;
   left: 2rem; }
 
@@ -216,13 +217,13 @@ h3 {
   font-family: 'HevelticaCond';
   font-size: 1.4rem; }
 
-.menupic__art--imgp {
+.menupic__art--imgp, .menupic__art--imgg {
   margin-left: 0.938rem;
   height: 13rem;
   width: 13rem;
   border: 1rem solid #EF7320; }
 
-.DogText {
+.DogText, .CatText {
   height: 7rem;
   background-color: #FFB600;
   font-family: 'HevelticaCond';
@@ -231,7 +232,7 @@ h3 {
   justify-content: center;
   font-size: 1.5rem; }
 
-.menupicp {
+.menupicp, .menupicg {
   background-color: #FFB600;
   width: 100%;
   display: inline-block;
@@ -240,14 +241,15 @@ h3 {
   justify-content: space-around;
   height: auto; }
 
-.articulosperro {
+.articulosperro, .articulosgato {
   display: grid;
   grid-template-columns: 20rem 20rem 20rem;
-  grid-template-rows: 35rem 35rem 35rem;
+  grid-template-rows: 35rem 35rem;
   background-color: #FFB600;
   justify-content: center;
-  grid-column-gap: 1rem;
-  grid-row-gap: 1rem; }
+  grid-column-gap: 5rem;
+  grid-row-gap: 5rem;
+  padding: 4rem; }
 
 .articulosperro__hijo {
   background-color: transparent;
@@ -297,44 +299,23 @@ h3 {
 .menutextCat {
   height: 8rem;
   padding: 8rem;
-  background-color: #924E7D;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+  background-color: #924E7D; }
 
 .CatText {
-  height: 7rem;
-  background-color: white;
-  font-family: 'HevelticaCond';
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  font-size: 1.5rem; }
+  background-color: white; }
 
 .menupicg {
-  display: inline-block;
-  background-color: white;
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  height: 20rem; }
+  background-color: white; }
 
 .menupic__art--imgg {
-  margin-left: 0.938rem;
-  height: 13rem;
-  width: 13rem;
   border: 1rem solid #924E7D; }
 
 .articulosgato {
-  display: grid;
-  grid-template-columns: 20rem 20rem 20rem;
-  grid-template-rows: 35rem 35rem 35rem;
-  background-color: white;
-  justify-content: center;
-  grid-column-gap: 1rem;
-  grid-row-gap: 1rem; }
+  background-color: white; }
 
 .articulosgato__hijo {
   background-color: transparent;
@@ -448,7 +429,7 @@ h3 {
     background-position-y: -50px;
     background-color: #c63637;
     width: 100%; }
-  .menupicp {
+  .menupicp, .menupicg {
     display: inline-block;
     background-color: #FFB600;
     width: 100%;
@@ -457,7 +438,7 @@ h3 {
     justify-content: space-around;
     align-items: center;
     height: 100rem; }
-  .articulosperro {
+  .articulosperro, .articulosgato {
     display: grid;
     grid-template-columns: 20rem 20rem;
     grid-template-rows: 30rem 30rem 30rem;
