--- a/scss/_gato.scss
+++ b/scss/_gato.scss
@@ -1,9 +1,5 @@
 .heroCat{
-    display: flex;
-    width: 100%;
-    height: 25rem;
-    display: inline-block;
-    text-align: center;
+   @include HeroStyles;
     background: url("../Assets/gatos.jpg") no-repeat fixed center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -15,56 +11,36 @@
 }
 
 .menutextCat{
-    height: 8rem;
-    padding: 8rem;
-    background-color:#924E7D ;
-    display: flex;
-    flex-direction: column;
-   justify-content: center;
-   align-items: center;
+    @include MenuTextStyles;
+   background-color:#924E7D ;
 
     }
 
     .CatText{
-        height: 7rem;
+       
         background-color: white;
-        font-family:'HevelticaCond' ;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        font-size: 1.5rem;
-        
-    
-    }
+        @extend .DogText 
+        }
 
     .menupicg{
-        display: inline-block;
+
+        @extend .menupicp;
         background-color: white;
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-        height: 20rem;
+       
         
     }
 
     .menupic__art--imgg{
-        margin-left: 0.938rem;
-        height: 13rem;
-        width: 13rem;
+        @extend .menupic__art--imgp;
         border: 1rem solid #924E7D  ;
        
     }
 
 
     .articulosgato{
-        display: grid;
-        grid-template-columns: 20rem 20rem 20rem;
-        grid-template-rows: 35rem 35rem 35rem;
+        @extend .articulosperro;
         background-color: white;
-        justify-content: center;
-        grid-column-gap: 1rem;
-        grid-row-gap: 1rem;
+        
     
     }
     
