--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,11 +1,8 @@
 @import "./variables";
 
+
 .hero{
-    display: flex;
-    width: 100%;
-    height: 25rem;
-    display: inline-block;
-    text-align: center;
+    @include HeroStyles;
     background: url("../Assets/animalitos[406].png") no-repeat fixed center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -20,6 +17,7 @@
  position: relative;
  top: 7rem;
  left: -25rem;
+ font-family: $titlefont;
  font-size: 2rem;
  color: $base-color;
  
@@ -28,7 +26,7 @@
 h3{
     color: black;
     text-align: center;
-    font-family: 'HevelticaCond';
+    font-family: $titlefont;
     font-size: 3rem;
 }
 
@@ -48,26 +46,21 @@ h3{
 
 
 .menutext{
-    height: 8rem;
-    padding: 8rem;
-    background-color:$base-color ;
-    display: flex;
-    flex-direction: column;
-   justify-content: center;
-   align-items: center;
+    @include MenuTextStyles;
+   background-color:$base-color ;
 
     }
 
 
 .menutext--text{
-    font-family:'HelveticaRoman' ;
+    font-family:$titletext ;
     font-size: 1.8rem;
 }
 
 .menupic__art{
     
     margin:25px;
-    height: 25rem;
+    height: auto;
     width: 18.75rem;
     background: $base-color ;
     border:  solid black;
@@ -119,7 +112,7 @@ h3{
     height: 19rem;
     width: 13rem;
     font-family: 'HelveticaRoman';
-    font-size: 1rem;
+    font-size: 1.5rem;
     position: relative;
     left: 2rem;
     
