--- a/scss/_perros.scss
+++ b/scss/_perros.scss
@@ -1,9 +1,6 @@
 .heroDog{
-    display: flex;
-    width: 100%;
-    height: 25rem;
-    display: inline-block;
-    text-align: center;
+   
+@include HeroStyles;
     background: url("../Assets/portadas_hero1_0_0.png") no-repeat fixed center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -58,11 +55,12 @@
 .articulosperro{
     display: grid;
     grid-template-columns: 20rem 20rem 20rem;
-    grid-template-rows: 35rem 35rem 35rem;
+    grid-template-rows: 35rem 35rem;
     background-color: #FFB600;
     justify-content: center;
-    grid-column-gap: 1rem;
-    grid-row-gap: 1rem;
+    grid-column-gap: 5rem;
+    grid-row-gap: 5rem;
+    padding: 4rem;
 
 }
 
