--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,3 +1,6 @@
+
+
+
 $estilosvarios: (
     "fuentetitulo": 'HevelticaCond',
     "tamañofuente": 3rem,
@@ -7,7 +10,21 @@ $estilosvarios: (
 $base-color: #FFB600;
 $secondary-color: #EF7320; 
 $titlefont: 'HevelticaCond';
+$titletext: 'HelveticaRoman';
 
+@mixin HeroStyles {
+    display: flex;
+    width: 100%;
+    height: 25rem;
+    display: inline-block;
+    text-align: center 
+}
 
-
-    
+@mixin MenuTextStyles {
+    height: 8rem;
+    padding: 8rem;
+    display: flex;
+    flex-direction: column;
+   justify-content: center;
+   align-items: center;
+}
