--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -63,6 +64,190 @@
 .list__item:hover {
   border-bottom: 0.3rem solid whitesmoke;
   transition: all 0.5s ease-in-out; }
+
+@media (max-width: 768px) {
+  .header {
+    display: inline-block;
+    background-image: url("../Assets/fondo patitas-01[401].png");
+    width: 100vh;
+    height: 10rem; }
+  .header__logo {
+    position: relative;
+    margin: 1.25rem 1.25rem 1.25rem 1.25rem;
+    padding: 1.25rem 1.25rem 1.25rem 1.25rem;
+    border-radius: 50%;
+    height: 8rem;
+    width: 8rem;
+    left: 35rem; }
+  .header__nav {
+    position: relative;
+    top: -8rem;
+    left: 4rem;
+    height: auto;
+    width: auto;
+    z-index: 2; }
+  .list {
+    display: none; }
+  .hamburguer1:checked ~ .list {
+    display: block; }
+  .hamburguer1 {
+    display: none; }
+  .hamburguer {
+    box-sizing: border-box;
+    display: inline-block;
+    border: 1px solid #FFB600;
+    border-radius: 5px;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    font-weight: bold;
+    text-align: center;
+    user-select: none; }
+  /* Estilo del boton cuando se pasa el mouse por encima*/
+  .hamburguer:hover {
+    background: #EF7320; }
+  /* Estilo del boton cuando el menú está expandido*/
+  .hamburguer1:checked ~ .hamburguer {
+    background: #EF7320; }
+  .list {
+    margin-top: 0;
+    padding: 0;
+    width: 200px; }
+  .list__item {
+    display: block;
+    background: #FFB600;
+    margin: 0;
+    padding: 10px;
+    list-style: none;
+    border-bottom: 3px outset #EF7320;
+    border-radius: 5px; }
+  .list__item:hover {
+    filter: brightness(110%); }
+  .hero {
+    position: relative;
+    display: flex;
+    width: 100%;
+    height: 25rem;
+    display: inline-block;
+    text-align: center;
+    background: url("/Assets/animalitos[406].png") no-repeat fixed center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position-y: -50px;
+    background-color: #EF7320; }
+  .hero__text {
+    position: relative;
+    top: 7rem;
+    left: 1rem;
+    font-size: 1rem;
+    color: #FFB600; }
+  h3 {
+    color: black;
+    text-align: center;
+    font-family: 'HevelticaCond';
+    font-size: 3rem; }
+  .header__nav {
+    position: relative;
+    right: 2rem; }
+  .menupic {
+    background-color: #FFB600;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 150rem; }
+  .menutext {
+    height: 8rem;
+    padding: 8rem;
+    background-color: #FFB600; }
+  .menutext--text {
+    font-family: 'HelveticaRoman';
+    font-size: 1.6rem; }
+  .menupic__art {
+    margin: 25px;
+    height: 40rem;
+    width: 18.75rem;
+    background: #FFB600;
+    border: solid black;
+    border-color: black;
+    border-width: 5px 3px 3px 5px;
+    border-radius: 95% 4% 97% 5%/4% 94% 3% 95%;
+    transform: rotate(2deg);
+    padding-top: 1rem; }
+  .menupic__art--img {
+    margin-left: 0.938rem;
+    height: 13rem;
+    width: 13rem;
+    border-radius: 50%; }
+  .menupic__text {
+    height: 19rem;
+    width: 13rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    font-family: 'HelveticaRoman';
+    font-size: 1.4rem; }
+  .heroDog {
+    display: flex;
+    height: 25rem;
+    display: inline-block;
+    text-align: center;
+    background: url("/Assets/portadas_hero1_0_0.png") no-repeat fixed center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position-y: -50px;
+    background-color: #c63637;
+    width: 100%; }
+  .menupicp, .menupicg {
+    display: inline-block;
+    background-color: #FFB600;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    height: 100rem; }
+  .articulosperro, .articulosgato {
+    display: grid;
+    grid-template-columns: 20rem 20rem;
+    grid-template-rows: 30rem 30rem 30rem;
+    background-color: #FFB600;
+    justify-content: center;
+    grid-column-gap: 1rem;
+    grid-row-gap: 1rem; }
+  .articulosperro__hijo {
+    background-color: transparent;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 20px;
+    border: 0.2rem outset #FF4800;
+    font-family: 'HevelticaRoman';
+    overflow: hidden; }
+  .articulosperro__title {
+    font-family: 'HevelticaCond';
+    position: relative;
+    left: 1.2rem;
+    height: auto;
+    width: auto; }
+  .articulosperro_p {
+    font-family: 'HevelticaRoman';
+    position: relative;
+    left: -1rem; }
+  .articulosperro__img {
+    height: auto;
+    width: 30rem;
+    position: relative;
+    left: 2px;
+    top: -1rem; } }
 
 .hero {
   display: flex;
@@ -165,6 +350,12 @@ h3 {
   font-size: 1.5rem;
   position: relative;
   left: 2rem; }
+
+.hamburguer {
+  display: none; }
+
+.hamburguer1 {
+  display: none; }
 
 .foot {
   background-image: url("../Assets/fondo patitas-01[401].png");
@@ -329,6 +520,11 @@ h3 {
   padding: 1rem; }
 
 @media (max-width: 768px) {
+  .header {
+    display: inline-block;
+    background-image: url("../Assets/fondo patitas-01[401].png");
+    width: 100vh;
+    height: 10rem; }
   .header__logo {
     position: relative;
     margin: 1.25rem 1.25rem 1.25rem 1.25rem;
@@ -336,26 +532,53 @@ h3 {
     border-radius: 50%;
     height: 8rem;
     width: 8rem;
-    left: -2rem; }
-  .list__item--line {
-    text-decoration: none;
-    font-family: 'HevelticaCond';
-    color: black;
-    font-size: 1rem; }
-  .list__item {
-    color: whitesmoke;
+    left: 35rem; }
+  .header__nav {
     position: relative;
+    top: -8rem;
+    left: 4rem;
+    height: auto;
+    width: auto;
+    z-index: 2; }
+  .list {
+    display: none; }
+  .hamburguer1:checked ~ .list {
+    display: block; }
+  .hamburguer1 {
+    display: none; }
+  .hamburguer {
+    box-sizing: border-box;
     display: inline-block;
-    margin-right: 15px;
-    padding: 5px 15px;
-    text-decoration: solid;
-    border: 0.3rem solid;
-    border-top: none;
-    border-left: none;
-    border-right: none;
-    border-bottom: none;
-    left: 0rem; }
+    border: 1px solid #FFB600;
+    border-radius: 5px;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    font-weight: bold;
+    text-align: center;
+    user-select: none; }
+  /* Estilo del boton cuando se pasa el mouse por encima*/
+  .hamburguer:hover {
+    background: #EF7320; }
+  /* Estilo del boton cuando el menú está expandido*/
+  .hamburguer1:checked ~ .hamburguer {
+    background: #EF7320; }
+  .list {
+    margin-top: 0;
+    padding: 0;
+    width: 200px; }
+  .list__item {
+    display: block;
+    background: #FFB600;
+    margin: 0;
+    padding: 10px;
+    list-style: none;
+    border-bottom: 3px outset #EF7320;
+    border-radius: 5px; }
+  .list__item:hover {
+    filter: brightness(110%); }
   .hero {
+    position: relative;
     display: flex;
     width: 100%;
     height: 25rem;
@@ -399,8 +622,16 @@ h3 {
     font-family: 'HelveticaRoman';
     font-size: 1.6rem; }
   .menupic__art {
-    height: 400px;
-    width: 300px; }
+    margin: 25px;
+    height: 40rem;
+    width: 18.75rem;
+    background: #FFB600;
+    border: solid black;
+    border-color: black;
+    border-width: 5px 3px 3px 5px;
+    border-radius: 95% 4% 97% 5%/4% 94% 3% 95%;
+    transform: rotate(2deg);
+    padding-top: 1rem; }
   .menupic__art--img {
     margin-left: 0.938rem;
     height: 13rem;
