--- a/css/main.css
+++ b/css/main.css
@@ -55,7 +55,7 @@
   border-right: none;
   border-bottom: none; }
 
-.list__item--line {
+.list__item--line, .articulosproductos__boton {
   text-decoration: none;
   font-family: 'HevelticaCond';
   color: black;
@@ -70,7 +70,8 @@
     display: inline-block;
     background-image: url("../Assets/fondo patitas-01[401].png");
     width: 100vh;
-    height: 10rem; }
+    height: 10rem;
+    overflow: scroll; }
   .header__logo {
     position: relative;
     margin: 1.25rem 1.25rem 1.25rem 1.25rem;
@@ -82,10 +83,7 @@
   .header__nav {
     position: relative;
     top: -8rem;
-    left: 4rem;
-    height: auto;
-    width: auto;
-    z-index: 2; }
+    left: 4rem; }
   .list {
     display: none; }
   .hamburguer1:checked ~ .list {
@@ -137,7 +135,8 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position-y: -50px;
-    background-color: #EF7320; }
+    background-color: #EF7320;
+    z-index: -3; }
   .hero__text {
     position: relative;
     top: 7rem;
@@ -215,7 +214,7 @@
     justify-content: space-around;
     align-items: center;
     height: 100rem; }
-  .articulosperro, .articulosgato {
+  .articulosperro, .articulosgato, .articulosproductos {
     display: grid;
     grid-template-columns: 20rem 20rem;
     grid-template-rows: 30rem 30rem 30rem;
@@ -223,7 +222,7 @@
     justify-content: center;
     grid-column-gap: 1rem;
     grid-row-gap: 1rem; }
-  .articulosperro__hijo {
+  .articulosperro__hijo, .articulosproductos__hijo {
     background-color: transparent;
     display: flex;
     flex-direction: column;
@@ -432,7 +431,7 @@ h3 {
   justify-content: space-around;
   height: auto; }
 
-.articulosperro, .articulosgato {
+.articulosperro, .articulosgato, .articulosproductos {
   display: grid;
   grid-template-columns: 20rem 20rem 20rem;
   grid-template-rows: 35rem 35rem;
@@ -442,7 +441,7 @@ h3 {
   grid-row-gap: 5rem;
   padding: 4rem; }
 
-.articulosperro__hijo {
+.articulosperro__hijo, .articulosproductos__hijo {
   background-color: transparent;
   display: flex;
   flex-direction: column;
@@ -524,7 +523,8 @@ h3 {
     display: inline-block;
     background-image: url("../Assets/fondo patitas-01[401].png");
     width: 100vh;
-    height: 10rem; }
+    height: 10rem;
+    overflow: scroll; }
   .header__logo {
     position: relative;
     margin: 1.25rem 1.25rem 1.25rem 1.25rem;
@@ -536,10 +536,7 @@ h3 {
   .header__nav {
     position: relative;
     top: -8rem;
-    left: 4rem;
-    height: auto;
-    width: auto;
-    z-index: 2; }
+    left: 4rem; }
   .list {
     display: none; }
   .hamburguer1:checked ~ .list {
@@ -591,7 +588,8 @@ h3 {
     background-repeat: no-repeat;
     background-size: cover;
     background-position-y: -50px;
-    background-color: #EF7320; }
+    background-color: #EF7320;
+    z-index: -3; }
   .hero__text {
     position: relative;
     top: 7rem;
@@ -669,7 +667,7 @@ h3 {
     justify-content: space-around;
     align-items: center;
     height: 100rem; }
-  .articulosperro, .articulosgato {
+  .articulosperro, .articulosgato, .articulosproductos {
     display: grid;
     grid-template-columns: 20rem 20rem;
     grid-template-rows: 30rem 30rem 30rem;
@@ -677,7 +675,7 @@ h3 {
     justify-content: center;
     grid-column-gap: 1rem;
     grid-row-gap: 1rem; }
-  .articulosperro__hijo {
+  .articulosperro__hijo, .articulosproductos__hijo {
     background-color: transparent;
     display: flex;
     flex-direction: column;
@@ -702,3 +700,60 @@ h3 {
     position: relative;
     left: 2px;
     top: -1rem; } }
+
+.heroBuy {
+  display: flex;
+  width: 100%;
+  height: 25rem;
+  display: inline-block;
+  text-align: center;
+  background: url("../Assets/hero-productos.png") no-repeat fixed center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position-y: -50px;
+  background-color: tomato;
+  position: relative;
+  top: 0.1rem; }
+
+.articulosproductos {
+  grid-template-columns: 20rem 20rem 20rem;
+  grid-template-rows: 30rem 30rem; }
+
+.articulosproductos__hijo {
+  border: 0.2rem solid #EF7320;
+  background-color: #FFEB0D;
+  border-radius: 0; }
+
+.articulosproductos__img {
+  position: relative;
+  width: 215px;
+  height: 215px;
+  top: 0.8rem;
+  transition: transform 1s; }
+
+.articulosproductos__img:hover {
+  transform: scale(1.5); }
+
+.articulosproductos__text {
+  height: 2rem;
+  width: 15rem;
+  margin-top: 3.5rem;
+  padding-top: 0.5rem;
+  font-family: "HevelticaCond";
+  font-size: 1.3rem; }
+
+.articulosproductos__boton {
+  height: auto;
+  width: auto;
+  position: relative;
+  border: 0.3rem solid #EF7320;
+  border-radius: 0.5rem;
+  bottom: -3.5rem;
+  font-size: 1.5rem;
+  padding: 0.5rem; }
+
+.articulosproductos__boton:hover {
+  background-color: white; }
