--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,5 +5,6 @@
 @import"./foot";
 @import "./perros";
 @import "./gato";
-@import "./mediaquery"
+@import "./mediaquery";
+@import "./nuestrosproductos.scss";
 
