Se trabaja en responsive de tablet

--- a/css/main.css
+++ b/css/main.css
@@ -129,20 +129,16 @@
     height: 25rem;
     display: inline-block;
     text-align: center;
-    background: url("/Assets/animalitos[406].png") no-repeat fixed center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
+    background: url("/Assets/animalitos[406].png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position-y: -50px;
-    background-color: #EF7320;
-    z-index: -3; }
+    background-color: #EF7320; }
   .hero__text {
     position: relative;
     top: 7rem;
     left: 1rem;
-    font-size: 1rem;
+    font-size: 3rem;
     color: #FFB600; }
   h3 {
     color: black;
@@ -163,7 +159,8 @@
   .menutext {
     height: 8rem;
     padding: 8rem;
-    background-color: #FFB600; }
+    background-color: #FFB600;
+    border: 1rem solid #FFB600; }
   .menutext--text {
     font-family: 'HelveticaRoman';
     font-size: 1.6rem; }
@@ -194,17 +191,13 @@
     font-size: 1.4rem; }
   /*         DOGS MEDIAQUERY   */
   .heroDog {
-    display: flex;
     height: 25rem;
     display: inline-block;
     text-align: center;
-    background: url("/Assets/portadas_hero1_0_0.png") no-repeat fixed center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
+    background: url("/Assets/portadas_hero1_0_0.png");
     background-repeat: no-repeat;
-    background-size: cover;
-    background-position-y: -50px;
+    background-position-y: -35px;
+    background-position-x: -487px;
     background-color: #c63637;
     width: 100%; }
   .menupicp, .menupicg {
@@ -247,10 +240,78 @@
     width: 30rem;
     position: relative;
     left: 2px;
-    top: -1rem; } }
+    top: -1rem; }
+  /* CATS MEDIAQUERYS*/
+  .heroCat {
+    width: 100%;
+    height: 25rem;
+    display: inline-block;
+    text-align: center;
+    background: url("../Assets/gatos.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position-y: -50px;
+    background-position-x: -50px;
+    background-color: #924E7D; }
+  .menupicg {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 12rem 12rem;
+    grid-template-rows: 16rem 16rem;
+    height: 40rem;
+    background-color: white; }
+  .articulosgato {
+    display: grid;
+    grid-template-columns: 20rem 20rem;
+    grid-template-rows: 30rem 30rem 30rem;
+    justify-content: center;
+    grid-column-gap: 1rem;
+    grid-row-gap: 1rem;
+    background-color: white; }
+  /* END CATS MEDIAQUERY*/
+  /* PRODUCTS MEDIAQUERYS*/
+  .heroBuy {
+    width: 100%;
+    height: 25rem;
+    display: inline-block;
+    text-align: center;
+    background: url("../Assets/hero-productos.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position-x: -326px; }
+  .articulosperro__hijo, .articulosproductos__hijo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: 'HevelticaRoman';
+    overflow: hidden;
+    border: 0.2rem solid #EF7320;
+    background-color: #FFEB0D;
+    border-radius: 0; }
+  /* END PRODUCTS MEDIAQUERY*/
+  /* CONTACT MEDIAQUERY*/
+  .heroContac {
+    width: 100%;
+    height: 25rem;
+    display: inline-block;
+    text-align: center;
+    background: url("../Assets/portadas_hero4.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position-x: -50px;
+    background-color: #EF7320; }
+  .container h2 {
+    justify-content: flex-start;
+    align-items: flex-end;
+    font-size: 2em; }
+  .container .box {
+    grid-template-columns: 1fr 2fr; }
+    .container .box .info {
+      grid-row: 1/3;
+      font-size: 1.2em;
+      background-position-x: -100px; } }
 
 .hero {
-  display: flex;
   width: 100%;
   height: 25rem;
   display: inline-block;
@@ -382,7 +443,6 @@ h3 {
   transform: scale(1.2); }
 
 .heroDog {
-  display: flex;
   width: 100%;
   height: 25rem;
   display: inline-block;
@@ -474,7 +534,6 @@ h3 {
   top: -1rem; }
 
 .heroCat {
-  display: flex;
   width: 100%;
   height: 25rem;
   display: inline-block;
@@ -520,193 +579,7 @@ h3 {
   overflow: hidden;
   padding: 1rem; }
 
-/* HEADER MEDIAQUERY*/
-@media (max-width: 768px) {
-  .header {
-    display: inline-block;
-    background-image: url("../Assets/fondo patitas-01[401].png");
-    width: 100vh;
-    height: 10rem;
-    overflow: scroll; }
-  .header__logo {
-    position: relative;
-    margin: 1.25rem 1.25rem 1.25rem 1.25rem;
-    padding: 1.25rem 1.25rem 1.25rem 1.25rem;
-    border-radius: 50%;
-    height: 8rem;
-    width: 8rem;
-    left: 35rem; }
-  .header__nav {
-    position: relative;
-    top: -8rem;
-    left: 4rem; }
-  .list {
-    display: none; }
-  .hamburguer1:checked ~ .list {
-    display: block; }
-  .hamburguer1 {
-    display: none; }
-  .hamburguer {
-    box-sizing: border-box;
-    display: inline-block;
-    border: 1px solid #FFB600;
-    border-radius: 5px;
-    width: 30px;
-    height: 30px;
-    line-height: 30px;
-    font-weight: bold;
-    text-align: center;
-    user-select: none; }
-  /* Estilo del boton cuando se pasa el mouse por encima*/
-  .hamburguer:hover {
-    background: #EF7320; }
-  /* Estilo del boton cuando el menú está expandido*/
-  .hamburguer1:checked ~ .hamburguer {
-    background: #EF7320; }
-  .list {
-    margin-top: 0;
-    padding: 0;
-    width: 200px; }
-  .list__item {
-    display: block;
-    background: #FFB600;
-    margin: 0;
-    padding: 10px;
-    list-style: none;
-    border-bottom: 3px outset #EF7320;
-    border-radius: 5px; }
-  .list__item:hover {
-    filter: brightness(110%); }
-  /*            INDEX MEDIAQUERYS    */
-  .hero {
-    position: relative;
-    display: flex;
-    width: 100%;
-    height: 25rem;
-    display: inline-block;
-    text-align: center;
-    background: url("/Assets/animalitos[406].png") no-repeat fixed center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position-y: -50px;
-    background-color: #EF7320;
-    z-index: -3; }
-  .hero__text {
-    position: relative;
-    top: 7rem;
-    left: 1rem;
-    font-size: 1rem;
-    color: #FFB600; }
-  h3 {
-    color: black;
-    text-align: center;
-    font-family: 'HevelticaCond';
-    font-size: 3rem; }
-  .header__nav {
-    position: relative;
-    right: 2rem; }
-  .menupic {
-    background-color: #FFB600;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    height: 150rem; }
-  .menutext {
-    height: 8rem;
-    padding: 8rem;
-    background-color: #FFB600; }
-  .menutext--text {
-    font-family: 'HelveticaRoman';
-    font-size: 1.6rem; }
-  .menupic__art {
-    margin: 25px;
-    height: 40rem;
-    width: 18.75rem;
-    background: #FFB600;
-    border: solid black;
-    border-color: black;
-    border-width: 5px 3px 3px 5px;
-    border-radius: 95% 4% 97% 5%/4% 94% 3% 95%;
-    transform: rotate(2deg);
-    padding-top: 1rem; }
-  .menupic__art--img {
-    margin-left: 0.938rem;
-    height: 13rem;
-    width: 13rem;
-    border-radius: 50%; }
-  .menupic__text {
-    height: 19rem;
-    width: 13rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    font-family: 'HelveticaRoman';
-    font-size: 1.4rem; }
-  /*         DOGS MEDIAQUERY   */
-  .heroDog {
-    display: flex;
-    height: 25rem;
-    display: inline-block;
-    text-align: center;
-    background: url("/Assets/portadas_hero1_0_0.png") no-repeat fixed center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position-y: -50px;
-    background-color: #c63637;
-    width: 100%; }
-  .menupicp, .menupicg {
-    background-color: #FFB600;
-    width: 100%;
-    display: grid;
-    grid-template-columns: 12rem 12rem;
-    grid-template-rows: 16rem 16rem;
-    height: 40rem; }
-  .articulosperro, .articulosgato, .articulosproductos {
-    display: grid;
-    grid-template-columns: 20rem 20rem;
-    grid-template-rows: 30rem 30rem 30rem;
-    background-color: #FFB600;
-    justify-content: center;
-    grid-column-gap: 1rem;
-    grid-row-gap: 1rem; }
-  .articulosperro__hijo, .articulosproductos__hijo {
-    background-color: transparent;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-radius: 20px;
-    border: 0.2rem outset #FF4800;
-    font-family: 'HevelticaRoman';
-    overflow: hidden; }
-  .articulosperro__title {
-    font-family: 'HevelticaCond';
-    position: relative;
-    left: 1.2rem;
-    height: auto;
-    width: auto; }
-  .articulosperro_p {
-    font-family: 'HevelticaRoman';
-    position: relative;
-    font-size: 0.8rem;
-    overflow: scroll; }
-  .articulosperro__img {
-    height: auto;
-    width: 30rem;
-    position: relative;
-    left: 2px;
-    top: -1rem; } }
-
 .heroBuy {
-  display: flex;
   width: 100%;
   height: 25rem;
   display: inline-block;
@@ -761,7 +634,6 @@ h3 {
   background-color: white; }
 
 .heroContac {
-  display: flex;
   width: 100%;
   height: 25rem;
   display: inline-block;
@@ -846,3 +718,250 @@ h3 {
     .container .box .info {
       grid-row: 1/3;
       font-size: 1.2em; } }
+
+/* HEADER MEDIAQUERY*/
+@media (max-width: 768px) {
+  .header {
+    display: inline-block;
+    background-image: url("../Assets/fondo patitas-01[401].png");
+    width: 100vh;
+    height: 10rem;
+    overflow: scroll; }
+  .header__logo {
+    position: relative;
+    margin: 1.25rem 1.25rem 1.25rem 1.25rem;
+    padding: 1.25rem 1.25rem 1.25rem 1.25rem;
+    border-radius: 50%;
+    height: 8rem;
+    width: 8rem;
+    left: 35rem; }
+  .header__nav {
+    position: relative;
+    top: -8rem;
+    left: 4rem; }
+  .list {
+    display: none; }
+  .hamburguer1:checked ~ .list {
+    display: block; }
+  .hamburguer1 {
+    display: none; }
+  .hamburguer {
+    box-sizing: border-box;
+    display: inline-block;
+    border: 1px solid #FFB600;
+    border-radius: 5px;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    font-weight: bold;
+    text-align: center;
+    user-select: none; }
+  /* Estilo del boton cuando se pasa el mouse por encima*/
+  .hamburguer:hover {
+    background: #EF7320; }
+  /* Estilo del boton cuando el menú está expandido*/
+  .hamburguer1:checked ~ .hamburguer {
+    background: #EF7320; }
+  .list {
+    margin-top: 0;
+    padding: 0;
+    width: 200px; }
+  .list__item {
+    display: block;
+    background: #FFB600;
+    margin: 0;
+    padding: 10px;
+    list-style: none;
+    border-bottom: 3px outset #EF7320;
+    border-radius: 5px; }
+  .list__item:hover {
+    filter: brightness(110%); }
+  /*            INDEX MEDIAQUERYS    */
+  .hero {
+    position: relative;
+    display: flex;
+    width: 100%;
+    height: 25rem;
+    display: inline-block;
+    text-align: center;
+    background: url("/Assets/animalitos[406].png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position-y: -50px;
+    background-color: #EF7320; }
+  .hero__text {
+    position: relative;
+    top: 7rem;
+    left: 1rem;
+    font-size: 3rem;
+    color: #FFB600; }
+  h3 {
+    color: black;
+    text-align: center;
+    font-family: 'HevelticaCond';
+    font-size: 3rem; }
+  .header__nav {
+    position: relative;
+    right: 2rem; }
+  .menupic {
+    background-color: #FFB600;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 150rem; }
+  .menutext {
+    height: 8rem;
+    padding: 8rem;
+    background-color: #FFB600;
+    border: 1rem solid #FFB600; }
+  .menutext--text {
+    font-family: 'HelveticaRoman';
+    font-size: 1.6rem; }
+  .menupic__art {
+    margin: 25px;
+    height: 40rem;
+    width: 18.75rem;
+    background: #FFB600;
+    border: solid black;
+    border-color: black;
+    border-width: 5px 3px 3px 5px;
+    border-radius: 95% 4% 97% 5%/4% 94% 3% 95%;
+    transform: rotate(2deg);
+    padding-top: 1rem; }
+  .menupic__art--img {
+    margin-left: 0.938rem;
+    height: 13rem;
+    width: 13rem;
+    border-radius: 50%; }
+  .menupic__text {
+    height: 19rem;
+    width: 13rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    font-family: 'HelveticaRoman';
+    font-size: 1.4rem; }
+  /*         DOGS MEDIAQUERY   */
+  .heroDog {
+    height: 25rem;
+    display: inline-block;
+    text-align: center;
+    background: url("/Assets/portadas_hero1_0_0.png");
+    background-repeat: no-repeat;
+    background-position-y: -35px;
+    background-position-x: -487px;
+    background-color: #c63637;
+    width: 100%; }
+  .menupicp, .menupicg {
+    background-color: #FFB600;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 12rem 12rem;
+    grid-template-rows: 16rem 16rem;
+    height: 40rem; }
+  .articulosperro, .articulosgato, .articulosproductos {
+    display: grid;
+    grid-template-columns: 20rem 20rem;
+    grid-template-rows: 30rem 30rem 30rem;
+    background-color: #FFB600;
+    justify-content: center;
+    grid-column-gap: 1rem;
+    grid-row-gap: 1rem; }
+  .articulosperro__hijo, .articulosproductos__hijo {
+    background-color: transparent;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 20px;
+    border: 0.2rem outset #FF4800;
+    font-family: 'HevelticaRoman';
+    overflow: hidden; }
+  .articulosperro__title {
+    font-family: 'HevelticaCond';
+    position: relative;
+    left: 1.2rem;
+    height: auto;
+    width: auto; }
+  .articulosperro_p {
+    font-family: 'HevelticaRoman';
+    position: relative;
+    font-size: 0.8rem;
+    overflow: scroll; }
+  .articulosperro__img {
+    height: auto;
+    width: 30rem;
+    position: relative;
+    left: 2px;
+    top: -1rem; }
+  /* CATS MEDIAQUERYS*/
+  .heroCat {
+    width: 100%;
+    height: 25rem;
+    display: inline-block;
+    text-align: center;
+    background: url("../Assets/gatos.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position-y: -50px;
+    background-position-x: -50px;
+    background-color: #924E7D; }
+  .menupicg {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 12rem 12rem;
+    grid-template-rows: 16rem 16rem;
+    height: 40rem;
+    background-color: white; }
+  .articulosgato {
+    display: grid;
+    grid-template-columns: 20rem 20rem;
+    grid-template-rows: 30rem 30rem 30rem;
+    justify-content: center;
+    grid-column-gap: 1rem;
+    grid-row-gap: 1rem;
+    background-color: white; }
+  /* END CATS MEDIAQUERY*/
+  /* PRODUCTS MEDIAQUERYS*/
+  .heroBuy {
+    width: 100%;
+    height: 25rem;
+    display: inline-block;
+    text-align: center;
+    background: url("../Assets/hero-productos.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position-x: -326px; }
+  .articulosperro__hijo, .articulosproductos__hijo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: 'HevelticaRoman';
+    overflow: hidden;
+    border: 0.2rem solid #EF7320;
+    background-color: #FFEB0D;
+    border-radius: 0; }
+  /* END PRODUCTS MEDIAQUERY*/
+  /* CONTACT MEDIAQUERY*/
+  .heroContac {
+    width: 100%;
+    height: 25rem;
+    display: inline-block;
+    text-align: center;
+    background: url("../Assets/portadas_hero4.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position-x: -50px;
+    background-color: #EF7320; }
+  .container h2 {
+    justify-content: flex-start;
+    align-items: flex-end;
+    font-size: 2em; }
+  .container .box {
+    grid-template-columns: 1fr 2fr; }
+    .container .box .info {
+      grid-row: 1/3;
+      font-size: 1.2em;
+      background-position-x: -100px; } }
