--- a/scss/_mediaquery.scss
+++ b/scss/_mediaquery.scss
@@ -111,15 +111,12 @@
             height: 25rem;
             display: inline-block;
             text-align: center;
-            background: url("/Assets/animalitos[406].png") no-repeat fixed center;
-            -webkit-background-size: cover;
-            -moz-background-size: cover;
-            -o-background-size: cover;
+            background: url("/Assets/animalitos[406].png");
             background-repeat: no-repeat;    
             background-size: cover;
             background-position-y: -50px ;
             background-color: #EF7320;
-            z-index: -3;
+            
             
         }
 
@@ -127,7 +124,7 @@
             position: relative;
             top: 7rem;
             left: 1rem;
-            font-size: 1rem;
+            font-size: 3rem;
             color: #FFB600  ;
         }
 
@@ -161,7 +158,8 @@
         .menutext{
             height: 8rem;
             padding: 8rem;
-            background-color:#FFB600 ;
+            background-color:#FFB600;
+            border: 1rem solid #FFB600;
             
             }
         
@@ -208,17 +206,14 @@
 
 /*         DOGS MEDIAQUERY   */
         .heroDog{
-            display: flex;
+            
             height: 25rem;
             display: inline-block;
             text-align: center;
-            background: url("/Assets/portadas_hero1_0_0.png") no-repeat fixed center;
-            -webkit-background-size: cover;
-            -moz-background-size: cover;
-            -o-background-size: cover;
+            background: url("/Assets/portadas_hero1_0_0.png");
             background-repeat: no-repeat;    
-            background-size: cover;
-            background-position-y: -50px ;
+            background-position-y: -35px;
+            background-position-x: -487px;
             background-color:  #c63637;;
             width: 100%;
         }
@@ -285,5 +280,100 @@
         
         }
 
+
+        /* CATS MEDIAQUERYS*/ 
+
+        .heroCat{
+          @include HeroStyles;
+           background: url("../Assets/gatos.jpg");
+           background-repeat: no-repeat;    
+           background-size: cover;
+           background-position-y: -50px ;
+           background-position-x: -50px ;
+           background-color:  #924E7D;;
+       }
         
+       .menupicg{
+
+        width: 100%;
+        display: grid;
+        grid-template-columns: 12rem 12rem;
+        grid-template-rows: 16rem 16rem;
+        height: 40rem;
+        background-color: white;
+       }
+
+       .articulosgato{
+            display: grid;
+            grid-template-columns: 20rem 20rem;
+            grid-template-rows: 30rem 30rem 30rem;
+            
+            justify-content: center;
+            grid-column-gap: 1rem;
+            grid-row-gap: 1rem;
+        background-color: white;
+        
+        }
+
+        /* END CATS MEDIAQUERY*/
+         
+        /* PRODUCTS MEDIAQUERYS*/
+
+
+    .heroBuy{
+    @include HeroStyles;
+    background: url("../Assets/hero-productos.png");
+    background-repeat: no-repeat;    
+    background-size: cover;
+    background-position-x: -326px;
+  }
+
+  .articulosperro__hijo{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: 'HevelticaRoman';    
+    overflow: hidden;
+
+    border: 0.2rem solid $secondary-color;
+   background-color: #FFEB0D;
+   border-radius: 0;
+
+
+      }
+      /* END PRODUCTS MEDIAQUERY*/
+
+
+      /* CONTACT MEDIAQUERY*/
+
+
+      .heroContac{
+        @include HeroStyles;
+        background: url("../Assets/portadas_hero4.png");
+        background-repeat: no-repeat;    
+        background-size: cover;
+        
+        background-position-x: -50px;
+        background-color: $secondary-color; }
+
+        .container{
+          h2{
+              justify-content: flex-start;
+              align-items: flex-end;
+              font-size: 2em;
+          }
+          .box{
+              grid-template-columns: 1fr 2fr;
+              .info{
+                  grid-row: 1/3;
+                  font-size: 1.2em;
+                  background-position-x: -100px;
+              }
+          }
+      }
 }
+
+
+
+
+    
