--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -25,6 +25,7 @@
             .box{
                 display: grid;
                 box-shadow: 0px 0px 10px #000;
+                background-image:url(../Assets/fondo\patitas-01[401].png);
                 
                 .info{
                 
@@ -35,6 +36,7 @@
                 }
                 form{
                     width: 100%;
+                    height: 30rem;
                     display: grid;
                     background: #efefef;
                     padding:10px 10px;
@@ -96,5 +98,14 @@
                 }
             }
         
-        
+            @media (min-width: 700px) {
+                .container h2 {
+                  justify-content: flex-start;
+                  align-items: flex-end;
+                  font-size: 2em; }
+                .container .box {
+                  grid-template-columns: 1fr 2fr; }
+                  .container .box .info {
+                    grid-row: 1/3;
+                    font-size: 1.2em; } }
       
