--- a/scss/_mediaquery.scss
+++ b/scss/_mediaquery.scss
@@ -10,7 +10,7 @@
 
     display:inline-block;
     background-image: url("../Assets/fondo\ patitas-01[401].png");
-    width: 100vh;
+    width: 100%;
     height: 10rem;
     overflow: scroll;
     
@@ -325,10 +325,10 @@
     background: url("../Assets/hero-productos.png");
     background-repeat: no-repeat;    
     background-size: cover;
-    background-position-x: -326px;
+    background-position-x: -620px;
   }
 
-  .articulosperro__hijo{
+  .articulosproductos__hijo{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -367,13 +367,454 @@
               .info{
                   grid-row: 1/3;
                   font-size: 1.2em;
-                  background-position-x: -100px;
+                  background-position-x: -200px;
               }
           }
       }
 }
 
 
+@media (max-width:425px){
 
 
+  /* HEADER MEDIAQUERY MOBILE */
+  
+
+    .header{
+
+   display:inline-block;
+   background-image: url("../Assets/fondo\ patitas-01[401].png");
+   width: 100%;
+   height: 10rem;
+   overflow: scroll;
+   
+   }
+   .header__logo{
+       position: relative;
+       margin: 1.25rem 1.25rem 1.25rem 1.25rem;
+       padding:1.25rem 1.25rem 1.25rem 1.25rem; 
+       border-radius: 50%;
+       height: 8rem;
+       width: 8rem;
+       left: 35rem;
+   }
+
+   .header__nav{
+     position: relative;
+     top: -8rem;
+     left: 4rem;
     
+   }
+
+
+    .list{
+          
+           
+           display: none;
+           
+
+           
+}
+         
+         .hamburguer1:checked  ~ .list{
+           display:block;
+           
+           
+         }
+         
+         .hamburguer1 {
+           display: none;
+         }
+         
+         .hamburguer{
+             
+           box-sizing: border-box;
+           display: inline-block;
+           border: 1px solid #FFB600;
+           border-radius: 5px;
+           width: 30px;
+           height: 30px;
+           line-height: 30px;
+           font-weight: bold;
+           text-align: center;
+           user-select: none;
+         }
+         
+         /* Estilo del boton cuando se pasa el mouse por encima*/
+         .hamburguer:hover{
+           background: #EF7320;
+         }
+         
+         /* Estilo del boton cuando el menú está expandido*/
+         .hamburguer1:checked ~ .hamburguer {
+           background: #EF7320; 
+           
+
+         }
+         
+         .list{
+           margin-top:0;
+           padding: 0;
+           width: 200px;
+         
+         }
+         
+         
+         .list__item {
+           display: block;
+           background: #FFB600;
+           margin: 0;
+           padding: 10px;
+           list-style: none;
+           border-bottom: 3px outset #EF7320;
+           border-radius: 5px;
+         }
+         
+         .list__item:hover {
+           filter: brightness(110%);
+         }
+
+          /*  HERO END */
+
+
+          /* INDEX MEDIAQUERY STARTS*/
+
+         .hero{
+          position: relative;
+          width: 100%;
+          height: 25rem;
+          display: inline-block;
+          text-align: center;
+          background: url("/Assets/animalitos[406].png");
+          background-repeat: no-repeat;    
+          background-size: cover;
+          background-position-x: -194px;
+          background-position-y: -50px ;
+          background-color: #EF7320;
+          
+          
+      }
+
+      .hero__text{
+          position: relative;
+          left: -3rem;
+          font-size: 1rem;
+          color: #FFB600  ;
+      }
+
+      h3{
+          color: black;
+          text-align: center;
+          font-family: 'HevelticaCond';
+          font-size: 3rem;
+      }
+
+      .header__nav{
+          position: relative;
+          right: 2rem;
+          
+          
+      }
+
+      .menupic{
+          
+          background-color: #FFB600;
+          width: 100%;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-evenly;
+          align-items: center;
+          height: 150rem;
+          
+      }
+      
+      
+      .menutext{
+         width: 100%;
+          height: 19rem;
+          padding: 8rem;
+          background-color:#FFB600;
+          border: 1rem solid #FFB600;
+          position: relative;
+          left: -3rem;
+          }
+      
+      
+      .menutext--text{
+          font-family:'HelveticaRoman' ;
+          font-size: 1.6rem;
+      }
+      
+      .menupic__art{
+          
+              margin:25px;
+              height: 40rem;
+              width: 18.75rem;
+              background: $base-color ;
+              border:  solid black;
+              border-color: black;
+              border-width: 5px 3px 3px 5px;
+              border-radius:95% 4% 97% 5%/4% 94% 3% 95%;
+              transform: rotate(2deg);
+              padding-top: 1rem
+          
+          
+      }
+      
+      .menupic__art--img{
+          margin-left: 0.938rem;
+          height: 13rem;
+          width: 13rem;
+         border-radius: 50%;
+      }
+      
+      .menupic__text{
+          height: 19rem;
+          width: 13rem;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-evenly;
+          align-items: center;
+          font-family: 'HelveticaRoman';
+          font-size: 1.4rem;
+          
+
+}
+  
+          /* INDEX END */
+
+
+          /* FOOTER MEDIAS */
+
+          foot{
+            background-image: url(../Assets/fondopatitas-01[401].png);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+             height: 25vh;
+            width: 100%;
+}
+         
+         
+         
+         
+         .buttons {
+          min-width: 372px;
+          display: flex;
+          justify-content: space-around;
+           }
+           
+           .buttons a {
+             text-decoration: none;
+             font-size: 28px;
+             width: 60px;
+             height: 60px;
+             line-height: 60px;
+             text-align: center;
+             background: #FF4800;
+             color: #FFB600;
+             border-radius: 50%;
+             box-shadow: 2px 2px 5px rgba(0, 0, 0, .5);
+             transition: all .4s ease-in-out;
+           }
+           
+           .buttons a:hover {
+             transform: scale(1.2);
+           }
+
+          /* FOOTER END*/
+
+
+          /*DOG QUERY */
+
+ .heroDog{
+               
+            width: 100%;
+            height: 22rem;
+            display: inline-block;
+            text-align: center;
+            background: url("/Assets/portadas_hero1_0_0.png");
+            background-repeat: no-repeat;    
+            background-position-y: -35px;
+            background-position-x: -487px;
+            background-size: cover;
+            background-color: $base-color;
+            
+        }
+
+
+        .menutextp{
+          width: 100%;
+          padding: 1rem;
+         background-color:$base-color ;
+         font-size: 1rem;
+         height: 18rem;
+
+      
+          }
+
+        .menupicp{
+            background-color: #FFB600;
+            width: 100%;
+            display: grid;
+            grid-template-columns: 12rem 12rem;
+            grid-template-rows: 16rem 16rem;
+            height: 40rem;
+            justify-content:start;
+           
+           }
+
+           .menupic__artp{
+            height: 200px;
+            width: 220px;}
+
+
+            .menupic__textp{
+              display: flex;
+              justify-content: center;
+              position: relative;
+              left: 1rem;
+              font-family: 'HevelticaCond';
+              font-size: 1.4rem;
+              
+          }
+
+
+        .articulosperro{
+            display: grid;
+            grid-template-columns: 20rem;
+            grid-template-rows: 30rem 30rem 30rem 30rem;
+            background-color: #FFB600;
+            justify-content: center;
+            grid-column-gap: 1rem;
+            grid-row-gap: 1rem;
+            overflow: hidden;
+        
+        }
+        
+        .articulosperro__hijo{
+            background-color: transparent;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            border-radius: 20px;
+            border: 0.2rem outset #FF4800;
+            font-family: 'HevelticaRoman';    
+            overflow: hidden;
+            
+            
+        }
+        
+        .articulosperro__title{
+            font-family: 'HevelticaCond' ;
+            position: relative;
+            left: 1.2rem;
+            height: auto;
+            width: auto;
+        }
+        
+        .articulosperro_p{
+            font-family:'HevelticaRoman';
+            position: relative;
+            
+            font-size: 0.8rem;
+            overflow: scroll;
+            
+        
+        }
+        
+        .articulosperro__img{
+            height: auto;
+            width: 30rem;
+            position: relative;
+            left: 2px;
+            top: -1rem;
+        
+        }
+
+/* DOG END*/ 
+
+/* CATS QUERY */ 
+.heroCat{
+  
+   background: url("../Assets/gatos.jpg");
+   width: 100%;
+   height: 22rem;
+   display: inline-block;
+   text-align: center;
+   background-position-y: -35px;
+            background-position-x: -487px;
+            background-size: cover;
+            background-color: $base-color;
+}
+
+.menutextCat {
+  width: 100%;
+  padding: 0rem;
+ font-size: 1rem;
+ height: 18rem;
+  background-color: #924E7D;
+}
+
+.menupicg{
+
+  background-color: white;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 12rem 12rem;
+  grid-template-rows: 16rem 16rem;
+  height: 40rem;
+  justify-content:start;
+}
+
+.articulosgato{
+  display: grid;
+  grid-template-columns: 20rem;
+  grid-template-rows: 30rem 30rem 30rem 30rem;
+  justify-content: center;
+  grid-column-gap: 1rem;
+  grid-row-gap: 1rem;
+  overflow: hidden;
+background-color: white;
+
+}
+
+
+/* CAT END */ 
+
+/* PRODUCTS QUERY*/
+
+.heroBuy{
+  width: 100%;
+  height: 22rem;
+  display: inline-block;
+  text-align: center;
+  background-position-y: -35px;
+           background-position-x: -487px;
+           background-size: cover;
+           background-color: $base-color;
+  background: url("../Assets/hero-productos.png");
+
+}
+
+.articulosproductos__hijo{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: 'HevelticaRoman';    
+  overflow: hidden;
+
+  border: 0.2rem solid $secondary-color;
+ background-color: #FFEB0D;
+ border-radius: 0;
+
+}
+
+/* PRODUCTS END*/
+
+
+
+
+
+
+}
